--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ numpy==1.22.2
 
 packaging==21.3; python_version >= '3.6'
 
-protobuf>=3.19.5 python_version >= '3.5'
+protobuf>=3.19.5; python_version >= '3.5'
 
 pyparsing==3.0.7; python_version >= '3.6'
 
